DB and fetch updates

--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,16 @@
 # should be updated accordingly.
 
 # Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/gallery"
-
+# Recommended for most uses
+# Parameters for Vercel Postgres Templates
+POSTGRES_URL=postgres://neondb_owner:npg_Erx4Q7Olousq@ep-dark-river-ab57dmzp-pooler.eu-west-2.aws.neon.tech/neondb?sslmode=require
+POSTGRES_URL_NON_POOLING=postgres://neondb_owner:npg_Erx4Q7Olousq@ep-dark-river-ab57dmzp.eu-west-2.aws.neon.tech/neondb?sslmode=require
+POSTGRES_USER=neondb_owner
+POSTGRES_HOST=ep-dark-river-ab57dmzp-pooler.eu-west-2.aws.neon.tech
+POSTGRES_PASSWORD=npg_Erx4Q7Olousq
+POSTGRES_DATABASE=neondb
+POSTGRES_URL_NO_SSL=postgres://neondb_owner:npg_Erx4Q7Olousq@ep-dark-river-ab57dmzp-pooler.eu-west-2.aws.neon.tech/neondb
+POSTGRES_PRISMA_URL=postgres://neondb_owner:npg_Erx4Q7Olousq@ep-dark-river-ab57dmzp-pooler.eu-west-2.aws.neon.tech/neondb?connect_timeout=15&sslmode=require
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
